--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
     <title>Flask Elasticsearch Search</title>
 </head>
 <body>
-    <h1>Search Page</h1>
+    <h1>Welcome to Wine Matcher 101</h1>
     <form method="post" action="/search">
-        <label for="query">Enter your query:</label>
+        <label for="query">Tell me the taste you are looking for:</label>
         <input type="text" id="query" name="query" required>
         <button type="submit">Search</button>
     </form>
